# mox

./: .gitignore  .readthedocs.yml  README.rst  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/mox/: active.py  loss.py  sampling.py  surrogates.py  training.py  utils.py
src/mox/seq2seq/: encoding.py  rnn.py  rnn_de.py  surrogates.py  training.py  transformer.py
src/mox/seq2seq/transformer/: surrogate.py  training.py  transformer.py
tests/: test_active.py  test_lhs.py  test_rnn.py  test_sample.py  test_serialisation.py  test_surrogates.py  test_time.py  test_training.py  test_transformer.py  test_utils.py
tests/helpers/: utils.py
